--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Hi Lodash!!</h1>
+    <input type="text" id="name">
+    <input type="text" id="email">
     <script src="./index.js"></script>
 </body>
 </html>
